**Crazy Changes** 1. Toggles with *smart* open/close memory 2. Fixed course href 3. Added date and authors 4. Fix z-index with images/tabs

--- a/assets/styles/learn.css
+++ b/assets/styles/learn.css
@@ -74,7 +74,7 @@ body {
 	overflow-x: hidden
 }
 
-button {
+#fin, #unfin {
 	cursor: pointer;
 	outline: 0;
 	border: 0;
@@ -87,18 +87,18 @@ button {
 	margin-left: 5px;
 }
 
-button:hover {
+#fin:hover, #unfin:hover {
 	opacity: 0.8;
 	transform: scale(0.98);
 }
 
-button:active {
+#fin:active, #unfin:active {
 	opacity: 0.5;
 	transform: scale(0.9);
 	transition: transform 0.1s;
 }
 
-.gray {
+#unfin {
 	background-color: #34495e;
 	color: white;
 }
@@ -985,4 +985,58 @@ pre:after {
 
 :root {
 	--theme-color: #FFC849;
+}
+
+.medium-zoom-image--opened, .medium-zoom-overlay {
+	z-index: 31;
+}
+
+.docsify-tabs__tab {
+	cursor: pointer;
+}
+
+#menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #FFC849;
+    border-radius: 10px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+    transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #FFC849;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
 }
